Name:                hxt-css-selectors
Version:             0.0.0.1
Synopsis:            CSS selectors for querying and processing HTML trees in HXT
-- Description:
License:             MIT
License-file:        LICENSE
Author:              Sami Hangaslammi
Maintainer:          shang@iki.fi
Copyright:           Copyright (c) 2012 Sami Hangaslammi
Category:            Text
Stability:           alpha
Homepage:            https://github.com/shangaslammi/hxt-css-selectors
Tested-With:         ghc 7.0.4
Build-type:          Simple
Extra-source-files: README.md, test-*.html
Cabal-version:       >=1.2

Test-Suite test-css-selectors
    type: exitcode-stdio-1.0
    main-is: test-css.hs
    build-depends: base, hspec >= 1.0.0.0, HUnit >= 1.2.4.0

Library
  Exposed-modules:     Text.XML.HXT.CSS, Text.XML.HXT.CSS.QQ, Text.XML.HXT.CSS.Internal.Selector, Text.XML.HXT.CSS.Internal.Helpers

  Build-depends: base, hxt >= 9.2.0, parsec >= 3.1.0, template-haskell, th-lift >= 0.5.0

  -- Other-modules:

  -- Build-tools:
